model flickering fix

--- a/assets/index.css
+++ b/assets/index.css
@@ -287,7 +287,6 @@ div.foreground {
   }
 
 .her.idle {
-    transition: 0.3s ease-out;
     opacity: 1;
 }
 
